# LinuxPractise

./: README.md
cmake-Demo5/: CMakeLists.txt  main.cc
cmake-Demo5/build-intermediate/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Demo5-9.5.2-Linux.tar.Z  Makefile  cmake_install.cmake  install_manifest.txt
cmake-Demo5/build-intermediate/_CPack_Packages/Linux/STGZ/: Demo5-9.5.2-Linux.sh
cmake-Demo5/build-intermediate/math/: Makefile  cmake_install.cmake
cmake-Demo5/math/: CMakeLists.txt
